--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".Fragment.LoginFragment">
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".Fragment.LoginFragment">
 
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+            android:id="@+id/textSignInStatus"
+            android:text="Sign in status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.331"/>
 
-</FrameLayout>
+    <TextView
+            android:id="@+id/textTokenStatus"
+            android:text="text token status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/textSignInStatus"
+            app:layout_constraintEnd_toEndOf="@+id/textSignInStatus"
+            app:layout_constraintTop_toBottomOf="@+id/textSignInStatus"
+            android:layout_marginTop="56dp"/>
+
+    <Button
+            android:id="@+id/button_signin"
+            android:text="Signin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@+id/textTokenStatus"
+            app:layout_constraintEnd_toEndOf="@+id/textTokenStatus"
+            app:layout_constraintTop_toBottomOf="@+id/textTokenStatus"
+            android:layout_marginTop="48dp"
+            app:layout_constraintHorizontal_bias="0.473"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
