--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Fragment.LoginFragment">
+        tools:context=".fragment.LoginFragment">
 
     <TextView
             android:id="@+id/textSignInStatus"
@@ -40,5 +40,17 @@
             app:layout_constraintTop_toBottomOf="@+id/textTokenStatus"
             android:layout_marginTop="48dp"
             app:layout_constraintHorizontal_bias="0.473"/>
+
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text="Name"
+            android:ems="10"
+            android:id="@+id/uid"
+            android:layout_marginTop="24dp"
+            app:layout_constraintTop_toBottomOf="@+id/button_signin"
+            app:layout_constraintStart_toStartOf="@+id/button_signin"
+            app:layout_constraintEnd_toEndOf="@+id/button_signin"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
