--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         tools:openDrawer="start"
-        tools:context=".Fragment.StudentFragment">
+        tools:context=".fragment.StudentFragment">
 
     <include
             layout="@layout/student_content"
@@ -22,6 +22,6 @@
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
             app:headerLayout="@layout/student_header"
-            app:menu="@menu/student_bottom_menu"/>
+            app:menu="@menu/student_drawer_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
