--- a/app/src/main/res/layout/student_content.xml
+++ b/app/src/main/res/layout/student_content.xml
@@ -16,11 +16,12 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/appBarLayout">
 
-            <androidx.appcompat.widget.Toolbar
+            <android.widget.Toolbar
                     android:id="@+id/toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize">
-            </androidx.appcompat.widget.Toolbar>
+                    android:layout_height="wrap_content">
+
+            </android.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
         <FrameLayout
