--- a/app/src/main/res/layout/student_header.xml
+++ b/app/src/main/res/layout/student_header.xml
@@ -5,17 +5,15 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="190dp"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark"
         android:orientation="vertical">
 
-    <de.hdodenhof.circleimageview.CircleImageView
+    <ImageView
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:src="@drawable/ic_person"
-            android:tint="@color/blue"
             android:layout_gravity="center_horizontal"
             android:id="@+id/imageView"
-            android:layout_marginTop="24dp"/>
+            android:layout_marginTop="24dp"
+            tools:srcCompat="@tools:sample/avatars[0]"/>
 
     <TextView
             android:layout_width="match_parent"
@@ -23,7 +21,8 @@
             android:textSize="18sp"
             android:gravity="center_horizontal"
             android:text="Dhruv Garg"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:id="@+id/textView3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:id="@+id/textView3"
             android:layout_marginTop="16dp"/>
 
     <TextView
