--- a/app/src/main/res/menu/student_drawer_menu.xml
+++ b/app/src/main/res/menu/student_drawer_menu.xml
@@ -3,28 +3,23 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/student_fee_payment"
-            android:title="Fee Payment"
-            android:icon="@drawable/ic_person"/>
+            android:id="@+id/fee_payment"
+            android:title="Fee Payment"/>
 
     <item
-            android:id="@+id/student_help"
-            android:title="Help"
-            android:icon="@drawable/ic_person"/>
+            android:id="@+id/help"
+            android:title="Help"/>
 
     <item
-            android:id="@+id/student_terms"
-            android:title="Terms and conditions"
-            android:icon="@drawable/ic_person"/>
+            android:id="@+id/terms"
+            android:title="Terms and conditions"/>
 
     <item
-            android:id="@+id/student_settins"
-            android:title="Settings"
-            android:icon="@drawable/ic_person"/>
+            android:id="@+id/settins"
+            android:title="Settings"/>
 
     <item
-            android:id="@+id/student_logout"
-            android:title="Logout"
-            android:icon="@drawable/ic_person"/>
+            android:id="@+id/logout"
+            android:title="Logout"/>
 
 </menu>
