--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -8,25 +8,28 @@
 
     <fragment
             android:id="@+id/chooseFragment"
-            android:name="com.vkarmaedu.vkarma.Fragment.ChooseFragment"
+            android:name="com.vkarmaedu.vkarma.fragment.ChooseFragment"
             android:label="fragment_choose"
             tools:layout="@layout/fragment_choose">
 
         <action
                 android:id="@+id/action_chooseFragment_to_studentFragment"
                 app:destination="@id/studentFragment"/>
+        <action
+                android:id="@+id/action_chooseFragment_to_teacherFragment"
+                app:destination="@id/teacherFragment"/>
 
     </fragment>
 
     <fragment
             android:id="@+id/studentFragment"
-            android:name="com.vkarmaedu.vkarma.Fragment.StudentFragment"
+            android:name="com.vkarmaedu.vkarma.fragment.StudentFragment"
             android:label="fragment_student"
             tools:layout="@layout/fragment_student"/>
 
     <fragment
             android:id="@+id/loginFragment"
-            android:name="com.vkarmaedu.vkarma.Fragment.LoginFragment"
+            android:name="com.vkarmaedu.vkarma.fragment.LoginFragment"
             android:label="fragment_login"
             tools:layout="@layout/fragment_login">
         <action
@@ -37,6 +40,12 @@
     <action
             android:id="@+id/action_global_loginFragment"
             app:destination="@id/loginFragment"/>
+
+    <fragment
+            android:id="@+id/teacherFragment"
+            android:name="com.vkarmaedu.vkarma.fragment.TeacherFragment"
+            android:label="fragment_teacher"
+            tools:layout="@layout/fragment_teacher"/>
 
 
 </navigation>
