--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -7,50 +7,38 @@
         android:layout_height="match_parent"
         tools:context=".fragment.LoginFragment">
 
-    <TextView
-            android:id="@+id/textSignInStatus"
-            android:text="Sign in status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.331"/>
-
-    <TextView
-            android:id="@+id/textTokenStatus"
-            android:text="text token status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/textSignInStatus"
-            app:layout_constraintEnd_toEndOf="@+id/textSignInStatus"
-            app:layout_constraintTop_toBottomOf="@+id/textSignInStatus"
-            android:layout_marginTop="56dp"/>
-
     <Button
             android:id="@+id/button_signin"
             android:text="Signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="@+id/textTokenStatus"
-            app:layout_constraintEnd_toEndOf="@+id/textTokenStatus"
-            app:layout_constraintTop_toBottomOf="@+id/textTokenStatus"
-            android:layout_marginTop="48dp"
-            app:layout_constraintHorizontal_bias="0.473"/>
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="304dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Name"
             android:ems="10"
-            android:id="@+id/uid"
-            android:layout_marginTop="24dp"
-            app:layout_constraintTop_toBottomOf="@+id/button_signin"
+            android:hint="password"
+            android:id="@+id/password"
             app:layout_constraintStart_toStartOf="@+id/button_signin"
-            app:layout_constraintEnd_toEndOf="@+id/button_signin"/>
+            app:layout_constraintEnd_toEndOf="@+id/button_signin"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/button_signin"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:hint="username"
+            android:id="@+id/username"
+            app:layout_constraintStart_toStartOf="@+id/button_signin"
+            app:layout_constraintEnd_toEndOf="@+id/button_signin"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toTopOf="@+id/password"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
