--- a/app/src/main/res/layout/student_header.xml
+++ b/app/src/main/res/layout/student_header.xml
@@ -5,6 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="190dp"
+        android:background="@color/browser_actions_bg_grey"
         android:orientation="vertical">
 
     <ImageView
