--- a/app/src/main/res/menu/teacher_bottom_menu.xml
+++ b/app/src/main/res/menu/teacher_bottom_menu.xml
@@ -16,8 +16,8 @@
             android:icon="@drawable/ic_person"/>
 
     <item
-            android:id="@+id/my_students"
-            android:title="My Students"
+            android:id="@+id/resultUpload"
+            android:title="result"
             android:icon="@drawable/ic_person"/>
 
     <item
