--- a/app/src/main/res/layout/student_content.xml
+++ b/app/src/main/res/layout/student_content.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -24,24 +23,21 @@
             </android.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
-        <FrameLayout
-                android:id="@+id/student_container"
+        <fragment
+                android:id="@+id/nav_host_student"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                app:navGraph="@navigation/student_graph"
                 app:layout_constraintBottom_toTopOf="@+id/student_bottom_nav"
                 app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
-        </FrameLayout>
+        </fragment>
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
                 android:id="@+id/student_bottom_nav"
                 app:menu="@menu/student_bottom_menu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:itemBackground="@color/blue"
-                android:foreground="?attr/selectableItemBackground"
-                app:itemIconTint="@drawable/bottom_nav_color"
-                app:itemTextColor="@drawable/bottom_nav_color"
                 app:layout_constraintBottom_toBottomOf="parent">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
@@ -49,3 +45,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+        <!--app:itemBackground="@color/blue"-->
+        <!--android:foreground="?attr/selectableItemBackground"-->
+        <!--app:itemIconTint="@drawable/bottom_nav_color"-->
+        <!--app:itemTextColor="@drawable/bottom_nav_color"-->
