--- a/app/src/main/res/layout/fragment_student_homework.xml
+++ b/app/src/main/res/layout/fragment_student_homework.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".fragment.StudentHomeworkFragment">
+<LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="24dp"
+        tools:context=".fragment.StudentHomeworkFragment">
 
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/homework_recycler_view"
+            tools:listitem="@layout/list_homework_student"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+    </androidx.recyclerview.widget.RecyclerView>
 
-</FrameLayout>
+</LinearLayout>
