--- a/app/src/main/res/layout/fragment_teacher_homework.xml
+++ b/app/src/main/res/layout/fragment_teacher_homework.xml
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textView2"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@+id/new_homework"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +33,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homework_recycler_view"
             android:layout_width="match_parent"
+            tools:listitem="@layout/list_homework_teacher"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
