--- a/app/src/main/res/navigation/student_graph.xml
+++ b/app/src/main/res/navigation/student_graph.xml
@@ -4,8 +4,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/student_graph"
-        app:startDestination="@id/studentProfileFragment">
-
+        app:startDestination="@id/homeworkFragment">
 
     <fragment
             android:id="@+id/studentProfileFragment"
@@ -29,6 +28,9 @@
             tools:layout="@layout/fragment_results"/>
     <fragment
             android:id="@+id/chatFragment"
-            android:name="com.vkarmaedu.vkarma.fragment.ChatFragment"
-            android:label="ChatFragment"/>
+            android:name="com.vkarmaedu.vkarma.fragment.ChatListFragment"
+            android:label="fragment_chat_list"
+            tools:layout="@layout/fragment_chat_list"/>
+
+
 </navigation>
