--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -8,13 +8,91 @@
         tools:context=".fragment.StudentProfileFragment">
 
 
+    <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:background="@color/blue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:src="@drawable/ic_person"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginTop="24dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginBottom="32dp"
+                    android:id="@+id/profile_pic"/>
+
+            <TextView
+                    android:text="Dhruv Garg"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/name"
+                    app:layout_constraintStart_toEndOf="@+id/profile_pic"
+                    android:layout_marginStart="24dp"
+                    app:layout_constraintTop_toTopOf="@+id/profile_pic"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
+
+            <TextView
+                    android:text="01"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/roll_no"
+                    app:layout_constraintStart_toStartOf="@+id/name"
+                    app:layout_constraintTop_toBottomOf="@+id/name"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/white"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <com.google.android.material.tabs.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            android:id="@+id/tabLayout">
+            android:id="@+id/tabLayout"
+            android:elevation="4dp"
+            android:padding="8dp"
+            app:tabIndicatorHeight="0dp"
+            android:background="@drawable/round_corners_rect"
+            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintBottom_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp">
+
+        <com.google.android.material.tabs.TabItem
+                android:text="Details"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+        <com.google.android.material.tabs.TabItem
+                android:text="Attendance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 
     </com.google.android.material.tabs.TabLayout>
+
+    <View
+            android:background="@color/gray"
+            android:layout_width="1dp"
+            android:layout_height="0dp"
+            android:elevation="4dp"
+            app:layout_constraintEnd_toEndOf="@+id/tabLayout"
+            app:layout_constraintStart_toStartOf="@+id/tabLayout"
+            app:layout_constraintTop_toTopOf="@+id/tabLayout"
+            app:layout_constraintBottom_toTopOf="@+id/viewpager"/>
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager"
