--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="text_margin">16dp</dimen>
     <dimen name="margin">48dp</dimen>
-    <dimen name="text">18sp</dimen>
+    <dimen name="textSize">18sp</dimen>
+    <dimen name="messageWidth">250dp</dimen>
 </resources>
