--- a/app/src/main/res/drawable/round_corners_rect.xml
+++ b/app/src/main/res/drawable/round_corners_rect.xml
@@ -4,4 +4,5 @@
         android:shape="rectangle">
     <solid android:color="@color/white"/>
     <corners android:radius="8dp"/>
+    <stroke android:color="@color/gray" android:width="1dp"/>
 </shape>
