--- a/app/src/main/res/drawable/send_message_background.xml
+++ b/app/src/main/res/drawable/send_message_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#98CEFA"/>
+            <solid android:color="@color/white"/>
             <corners android:radius="10dp" android:topRightRadius="0dp"/>
         </shape>
     </item>
