--- a/app/src/main/res/layout/list_homework_student.xml
+++ b/app/src/main/res/layout/list_homework_student.xml
@@ -12,8 +12,10 @@
             android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:id="@+id/date"/>
+            android:id="@+id/date"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
     <androidx.cardview.widget.CardView
             app:cardCornerRadius="4dp"
