--- a/app/src/main/res/layout/message_image_recieve.xml
+++ b/app/src/main/res/layout/message_image_recieve.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,35 +22,31 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginStart="4dp"/>
 
-    <TextView
-            android:id="@+id/message_text"
-            android:text="Hi, what's up. How was the day"
-            android:maxWidth="250dp"
-            android:textColor="@android:color/black"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp"
-            android:textSize="18sp"
-            android:layout_marginBottom="2dp"
+    <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:scaleType="centerCrop"
+            tools:srcCompat="@tools:sample/backgrounds/scenic[15]"
+            android:id="@+id/attachment"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="4dp"
+            app:layout_constraintStart_toStartOf="@+id/message_username"
             app:layout_constraintTop_toBottomOf="@+id/message_username"
-            android:layout_marginTop="2dp"/>
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     <TextView
             android:id="@+id/message_time"
             android:text="09:19"
-            android:textSize="12sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/attachment"
             android:layout_marginEnd="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/message_text"
-            android:layout_marginStart="8dp"/>
+            app:layout_constraintBottom_toBottomOf="@+id/attachment"
+            android:textColor="@color/white"
+            android:layout_marginBottom="2dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
