--- a/app/src/main/res/layout/message_image_send.xml
+++ b/app/src/main/res/layout/message_image_send.xml
@@ -12,37 +12,37 @@
             android:padding="4dp"
             app:layout_anchorGravity="end"
             android:layout_gravity="end"
-            android:elevation="2dp"
+            android:elevation="1dp"
             android:background="@drawable/send_message_background"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/message_text"
-                android:text="Hi, what's up. How was the day"
-                android:maxWidth="250dp"
-                android:textColor="@android:color/black"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+
+        <ImageView
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                tools:srcCompat="@tools:sample/backgrounds/scenic[6]"
+                android:id="@+id/attachment"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginBottom="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="4dp"
+                android:layout_marginTop="4dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
-                android:textSize="18sp"
-                android:layout_marginBottom="2dp"
-                app:layout_constraintTop_toBottomOf="@+id/attachment"
-                android:layout_marginTop="8dp"/>
+                android:layout_marginStart="4dp"/>
+
 
         <TextView
                 android:id="@+id/message_time"
                 android:text="09:19"
-                android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginEnd="8dp"
-                android:layout_marginStart="16dp"
-                app:layout_constraintStart_toEndOf="@+id/message_text"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
+                app:layout_constraintEnd_toEndOf="@+id/attachment"
+                android:layout_marginEnd="4dp"
+                app:layout_constraintBottom_toBottomOf="@+id/attachment"
+                android:layout_marginBottom="2dp"
+                android:textColor="@color/white"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
