--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
     <color name="white">#fff</color>
     <color name="black">#000</color>
     <color name="gray">#A2A2A2</color>
-    <color name="grayLight">#E2E2E2</color>
+    <color name="grayLight">#ececec</color>
 </resources>
