--- a/app/src/main/res/layout/list_notifications.xml
+++ b/app/src/main/res/layout/list_notifications.xml
@@ -13,7 +13,7 @@
             android:layout_height="wrap_content">
 
         <ImageView
-                android:id="@+id/image"
+                android:id="@+id/icon"
                 android:src="@drawable/ic_check"
                 android:background="@drawable/round_bg"
                 android:padding="4dp"
@@ -32,8 +32,8 @@
                 android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="@+id/image"
-                app:layout_constraintStart_toEndOf="@+id/image"
+                app:layout_constraintTop_toTopOf="@+id/icon"
+                app:layout_constraintStart_toEndOf="@+id/icon"
                 android:layout_marginStart="16dp"/>
 
         <TextView
@@ -47,7 +47,7 @@
                 app:layout_constraintStart_toStartOf="@+id/heading"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView2"/>
+                app:layout_constraintEnd_toStartOf="@+id/cross"/>
 
         <ImageView
                 android:src="@drawable/ic_clear"
@@ -56,7 +56,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="16dp"
                 app:layout_constraintTop_toTopOf="@+id/heading"
-                android:id="@+id/imageView2"/>
+                android:id="@+id/cross"/>
 
         <TextView
                 android:id="@+id/time"
