--- a/app/src/main/res/layout/student_content.xml
+++ b/app/src/main/res/layout/student_content.xml
@@ -14,6 +14,8 @@
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/toolbar"
+                    app:titleTextColor="@color/white"
+                    app:title="Student"
                     app:popupTheme="@style/AppTheme.PopupOverlay"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
