--- a/app/src/main/res/navigation/student_graph.xml
+++ b/app/src/main/res/navigation/student_graph.xml
@@ -28,9 +28,9 @@
             tools:layout="@layout/fragment_results"/>
     <fragment
             android:id="@+id/chatFragment"
-            android:name="com.vkarmaedu.vkarma.fragment.ChatListFragment"
+            android:name="com.vkarmaedu.vkarma.fragment.ChatChannelFragment"
             android:label="fragment_chat_list"
-            tools:layout="@layout/fragment_chat_list"/>
+            tools:layout="@layout/fragment_chat_channel"/>
 
 
 </navigation>
