UI of Teachers Profile work in progress UI of Teacher My class student list completed

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#55A3DF</color>
     <color name="colorPrimaryDark">#3C7CAF</color>
     <color name="colorAccent">#fff</color>
-    <color name="blue">#5FB6D8</color>
+    <color name="blue">#5fb6d8</color>
     <color name="red">#E6FF1919</color>
     <color name="green">#24D624</color>
     <color name="yellow">#F1D321</color>
