--- a/app/src/main/res/layout/fragment_teacher_my_class_student_list.xml
+++ b/app/src/main/res/layout/fragment_teacher_my_class_student_list.xml
@@ -3,30 +3,28 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".fragment.TeacherMyClassFragment">
+             tools:context=".fragment.TeacherMyClassStudentList">
 
     <!-- TODO: Update blank fragment layout -->
-
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
+            android:textSize="20sp"
             android:textColor="#3d3f43"
             android:letterSpacing="0.05"
             android:lineSpacingExtra="4sp"
-            android:text="My Class"
-            android:layout_marginTop="40dp"
-            android:layout_marginLeft="50dp"
-            android:id="@+id/my_classTextView"
-            android:textStyle="bold"/>
+            android:text="Class XII-A"
+            android:layout_marginTop="35dp"
+            android:layout_marginLeft="35dp"
+            android:textStyle="bold"
+            android:id="@+id/teacher_my_class_nameTextView"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="80dp"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
-            android:id="@+id/teacher_my_classRecyclerview"
-            tools:listitem="@layout/teacher_myclass_list_item"/>
-
+            android:layout_marginTop="75dp"
+            android:layout_marginLeft="35dp"
+            android:layout_marginRight="35dp"
+            android:id="@+id/teacher_my_class_student_listRecycleryView"
+            tools:listitem="@layout/teacher_my_class_student_list_recyclerview_item"/>
 </FrameLayout>
